crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/foo.usda
version https://git-lfs.github.com/spec/v1
oid sha256:33ea6d79a1b497a8c1b235020d5416075127063a4653fe52dd86d948b2d97208
size 803
